--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -133,7 +133,7 @@ $ndnf: "/img/projects/large/ndnf-large.jpg";
     background-size: cover;
     z-index: 1;
     @include borderBox;
-    @include transition(all 0.3s ease-in-out);;
+    // @include transition(all 0.3s ease-in-out);
     @include respond-to(wide-screens) {
       width: 46.6225%;
       float: left;
@@ -150,12 +150,12 @@ $ndnf: "/img/projects/large/ndnf-large.jpg";
         background-repeat: no-repeat;
         z-index: 2;
         opacity: 0;
-        -webkit-transition: opacity 0.5s;
-        -moz-transition:    opacity 0.5s;
-        -o-transition:      opacity 0.5s;
+        @include transition(opacity 0.3s ease-in-out);
+        -webkit-transition: opacity 0.3s ease-in-out;
       }
       &:hover:after {
         opacity: 1;
+        -webkit-transition: opacity 0.3s ease-in-out;
       }
     }
     @include respond-to(medium-screens) {
